--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,6 @@
 <div class="center jumbotron">
   <h1><%= t "page.home.title" %></h1>
   <p><%= t "page.home.description" %></p>
-  <%= link_to t("t.page.signup.title"), "#", class: "btn btn-lg btn-primary" %>
+  <%= link_to t("page.signup.title"), signup_path,
+   class: "btn btn-lg btn-primary" %>
 </div>
