--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,26 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("page.home.home"), root_path %></li>
         <li><%= link_to t("page.help.help"), help_path %></li>
-        <li><%= link_to t("page.login"), "#" %></li>
+        <% if logged_in? %>
+          <li><%= link_to "Users", "#" %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= t "page.account" %> <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <%= link_to link_to t("page.profile.title"), current_user %>
+              </li>
+              <li><%= link_to link_to t("page.setting.title"), "#" %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t("page.logout"), logout_path, method: "delete" %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to t("page.login"), login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
