--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,9 +13,11 @@
             </a>
             <ul class="dropdown-menu">
               <li>
-                <%= link_to link_to t("page.profile.title"), current_user %>
+                <%= link_to t("page.profile.title"), current_user %>
               </li>
-              <li><%= link_to link_to t("page.setting.title"), "#" %></li>
+              <li><%= link_to t("page.setting.title"),
+                edit_user_path(current_user) %>
+              </li>
               <li class="divider"></li>
               <li>
                 <%= link_to t("page.logout"), logout_path, method: "delete" %>
