--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -4,7 +4,7 @@
       <%= pluralize(@user.errors.count, "error") %>.
     </div>
     <ul>
-    <% @user.errorsregister..fulls.each do |msg| %>
+    <% @user.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
     <% end %>
     </ul>
