admin create category

--- a/app/views/shared/_category_error_messages.html.erb
+++ b/app/views/shared/_category_error_messages.html.erb
@@ -1,10 +1,10 @@
-<% if object.errors.any? %>
+<% if @category.errors.any? %>
   <div id="error_explanation">
     <div class="alert alert-danger">
-      <%= t "messages.create_failed" %>.
+      <%= pluralize(@category.errors.count, "error") %>.
     </div>
     <ul>
-    <% object.errors.full_messages.each do |msg| %>
+    <% @category.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
     <% end %>
     </ul>
