--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,7 +3,7 @@
 <%= form_tag admin_users_path, method: :get do %>
   <%= text_field_tag :search, params[:search],
     placeholder: t("page.admin.users.placeholder_search") %>
-  <%= submit_tag t("page.admin.users.btn_submit"), id: "searchbtn" %>
+  <%= submit_tag t("page.admin.users.submit_search_users"), id: "searchbtn" %>
 <% end %>
 <%= will_paginate %>
 <table class="table table-hover">
@@ -24,7 +24,7 @@
             <% if current_user.is_admin? && !current_user.current_user?(user) %>
               <%= link_to "user", user %>|
               <%= link_to "delete-btn", [:admin, user], method: :delete,
-                data: {confirm: "page.admin.users.delete_confirm"} %>
+                data: {confirm: t("page.admin.users.delete_confirm")} %>
             <% end %>
           </td>
         </tr>
