--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 <%= form_tag users_path, method: :get do %>
   <%= text_field_tag :search, params[:search],
     placeholder: t("page.admin.users.placeholder_search") %>
-  <%= submit_tag t("page.admin.users.btn_submit"), id: "searchbtn" %>
+  <%= submit_tag t("page.admin.users.submit_search_users"), id: "searchbtn" %>
 <% end %>
 <%= will_paginate %>
 <table class="table table-hover">
