--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,8 @@
         <li><%= link_to t("page.home.home"), root_path %></li>
         <li><%= link_to t("page.help.help"), help_path %></li>
         <% if logged_in? %>
-          <li><%= link_to "Users", "#" %></li>
+          <li><%= link_to t("page.user.title"), "#" %></li>
+          <li><%= link_to t("page.category.title"), categories_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= t "page.account" %> <b class="caret"></b>
