--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,13 @@
         <li><%= link_to t("page.help.help"), help_path %></li>
         <% if logged_in? %>
           <li><%= link_to t("page.user.title"), "#" %></li>
-          <li><%= link_to t("page.category.title"), categories_path %></li>
+          <li>
+            <% if current_user.is_admin %>
+              <%= link_to t("page.category.title"), admin_categories_path %>
+            <% else %>
+              <%= link_to t("page.category.title"), categories_path %>
+            <% end %>
+          </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= t "page.account" %> <b class="caret"></b>
