--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,7 +1,7 @@
-<% provide :title, t("page.admin.categories.title_create") %>
-<h1><%= t "page.admin.categories.title_page_create" %></h1>
+<% provide :title, t("page.admin.categories.title_update") %>
+<h2><%= t "page.admin.categories.title_page_update" %></h2>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-9">
     <%= form_for [:admin, @category] do |f| %>
       <%= render "/shared/error_messages", object: f.object %>
       <%= f.label :name %>
@@ -9,8 +9,8 @@
 
       <%= f.label :description %>
       <%= f.text_field :description, class: "form-control" %>
-      <br>
-      <%= f.submit t("page.admin.categories.submit_create_new_category"),
+
+      <%= f.submit t("page.admin.categories.submit_update_category"),
         class: "btn btn-primary" %>
     <% end %>
   </div>
