--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,9 +1,11 @@
 <% provide :title, t("page.category.title") %>
+<div class="search-form">
 <%= form_tag(categories_path, :method => "get", id: "search-form") do %>
   <%= text_field_tag :search, params[:search],
     placeholder: t("page.category.search_placeholer") %>
   <%= submit_tag t "page.search", :name => nil %>
 <% end %>
+</div>
 <ul class="categories">
   <% @categories.each do |category| %>
     <li>
@@ -18,7 +20,9 @@
           <%= word.content %>
         <% end %>
       </h4>
+      <%= link_to t("page.lessons.link_create_lesson"),
+        category_lessons_path(category), method: :post %>
     </li>
   <% end %>
+  <%= will_paginate %>
 </ul>
-<%= will_paginate %>
