--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,9 @@
                   <li>
                     <%= link_to t("page.category.title"), admin_categories_path %>
                   </li>
-                  <li><%= link_to t("page.manager_user.users"), admin_users_path %></li>
+                  <li>
+                    <%= link_to t("page.manager_user.users"), admin_users_path %>
+                  </li>
                 </ul>
               </li>
             <% else %>
