--- a/app/views/lessons/_result.html.erb
+++ b/app/views/lessons/_result.html.erb
@@ -5,15 +5,15 @@
       <%= f.radio_button :word_answer_id, answer.id,
         disabled: f.object.lesson.is_complete? %>
       <%= answer.content %>
-      <% if f.object.lesson.is_complete? %>
+      <% if f.object.lesson.is_complete? && f.object.word_answer_id == answer.id %>
         <% if answer.is_correct %>
           <%= image_tag "true.png", alt: t("page.word.icon_true"),
             width: Settings.size_icon_true_false,
             height: Settings.size_icon_true_false %>
         <% else %>
-          <font color="red">
-            <%= t "page.lessons.incorrect_answer" %>
-          </font>
+          <%= image_tag "false.png", alt: t("page.word.icon_true"),
+            width: Settings.size_icon_true_false,
+            height: Settings.size_icon_true_false %>
         <% end %>
       <% end %>
     </div>
