--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,39 +1,67 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-/* mixins, variables, etc. */
-
 $gray-medium-light: #eaeaea;
+$gray-medium-light: #272727;
+$default-font-size: 14px;
 
-/* universal */
-
-body {
+body{
   padding-top: 60px;
+  font-family: "Roboto", sans-serif;
+  font-size: $default-font-size;
+  line-height: 1.5;
 }
 
-section {
+#error_explanation {
+  border: 2px solid red;
+  padding: 7px;
+  padding-bottom: 0;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+  h2 {
+    text-align: left;
+    font-weight: bold;
+    padding: 5px 5px 5px 15px;
+    font-size: 12px;
+    margin: -7px;
+    margin-bottom: 0px;
+    background-color: #c00;
+    color: #fff;
+  }
+  ul li {
+    font-size: 12px;
+    list-style: square;
+  }
+}
+
+#list_user {
+  border: 1px solid #e7e7e7;
+  .title_table {
+    background-color: #B8E6FF;
+  }
+}
+
+.stats {
   overflow: auto;
-}
-
-textarea {
-  resize: vertical;
-}
-
-.center {
-  text-align: center;
-  h1 {
-    margin-bottom: 10px;
-  }
-  ul {
-    list-style: none;
-  }
-  table {
-    align: center;
-    tr {
-      th, td {
-        padding: 10px;
-      }
+  margin-top: 0;
+  padding: 0;
+  font-size: 15px !important;
+  a {
+    float: right;
+    padding: 0 10px;
+    border-left: 1px solid $gray-lighter;
+    color: black;
+    &:first-child {
+      padding-left: 0;
+      border: 0;
     }
+    &:hover {
+      text-decoration: none;
+      color: green;
+    }
+  }
+  strong {
+    display: block;
   }
 }
 
@@ -62,6 +90,63 @@ h2 {
 p {
   font-size: 1.1em;
   line-height: 1.7em;
+}
+
+#user_info {
+  margin-top: 20px;
+  padding-left: 80px;
+  padding-bottom: 15px;
+  width: auto;
+  .image {
+  }
+  .information {
+    padding-left: 10px;
+    font-style: italic;
+  }
+}
+
+.result2, .clear{
+  float:left;
+}
+
+.result3{
+  color:red;
+}
+
+.lessons_learned_list, .activities, h1.framgia{
+  color: orange;
+}
+
+.th_word{
+  text-align: center;
+}
+
+.result4{
+  float:left;
+  padding-left: 130px;
+  padding-right: 20px;
+}
+
+section {
+  overflow: auto;
+}
+
+.center {
+  text-align: center;
+  h1 {
+    margin-bottom: 10px;
+  }
+  ul {
+    list-style: none;
+  }
+  table {
+    align: center;
+    tr {
+      th, td {
+        padding: 10px;
+      }
+    }
+  }
 }
 
 /* header */
@@ -106,120 +191,60 @@ footer {
     }
   }
 
-@mixin box_sizing {
-  -moz-box-sizing:    border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing:         border-box;
-}
-
-/* miscellaneous */
-
-.debug_dump {
-  clear: both;
-  float: left;
-  width: 100%;
-  margin-top: 45px;
-  @include box_sizing;
-}
-
-/* sidebar */
-
-aside {
-  section.user_info {
-    margin-top: 20px;
+  @mixin box_sizing {
+    -moz-box-sizing:    border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing:         border-box;
   }
-  section {
-    padding: 10px 0;
-    margin-top: 20px;
-    &:first-child {
-      border: 0;
-      padding-top: 0;
+
+
+  /* sidebar */
+
+  aside {
+    section.user_info {
+      margin-top: 20px;
     }
-    span {
-      display: block;
-      margin-bottom: 3px;
-      line-height: 1;
-    }
-    h1 {
-      font-size: 1.4em;
-      text-align: left;
-      letter-spacing: -1px;
-      margin-bottom: 3px;
-      margin-top: 0px;
+    section {
+      padding: 10px 0;
+      margin-top: 20px;
+      &:first-child {
+        border: 0;
+        padding-top: 0;
+      }
+      span {
+        display: block;
+        margin-bottom: 3px;
+        line-height: 1;
+      }
+      h1 {
+        font-size: 1.4em;
+        text-align: left;
+        letter-spacing: -1px;
+        margin-bottom: 3px;
+        margin-top: 0px;
+      }
     }
   }
-}
 
-.gravatar {
-  float: left;
-  margin-right: 10px;
-}
-
-.gravatar_edit {
-  margin-top: 15px;
-}
-
-#error_explanation {
-  color: red;
-  ul {
-    color: red;
-    margin: 0 0 30px 0;
-  }
-}
-
-.field_with_errors {
-  @extend .has-error;
-  .form-control {
-    color: $state-danger-text;
-  }
-}
-
-/* forms */
-
-input, textarea, select, .uneditable-input {
-  border: 1px solid #bbb;
-  width: 100%;
-  margin-bottom: 15px;
-  @include box_sizing;
-}
-
-input {
-  height: auto !important;
-}
-}
-
-#list_user {
-  border: 1px solid #e7e7e7;
-  .title_table {
-    background-color: #7FDBFF;
-  }
-}
-#form_search {
-  float: left;
-  margin-left: 2px;
-  margin-bottom: 10px;
-}
-
-.stats {
-  overflow: auto;
-  margin-top: 0;
-  padding: 0;
-  font-size: 15px !important;
-  a {
+  .gravatar {
     float: left;
-    padding: 0 10px;
-    border-left: 1px solid $gray-lighter;
-    color: black;
-    &:first-child {
-      padding-left: 0;
-      border: 0;
-    }
-    &:hover {
-      text-decoration: none;
-      color: blue;
-    }
+    margin-right: 10px;
   }
-  strong {
-    display: block;
+
+  .gravatar_edit {
+    margin-top: 15px;
+  }
+
+  /* forms */
+
+  input, select{
+    border: 1px solid #bbb;
+    width: 100%;
+    margin-bottom: 15px;
+    @include box_sizing;
+  }
+
+  input {
+    height: auto !important;
   }
 }
