--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,3 +1,18 @@
+<div class="row title">
+  <div class="col-lg-12">
+    <h1><%= t "page.admin.categories.title" %></h1>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8 clear"></div>
+    <div class="col-lg-4">
+      <%= link_to t("page.admin.categories.add"), new_admin_category_path,
+        class: "btn btn-info" %>
+    </div>
+  </div>
+</div>
+<div class="row"><div class="col-lg-12"><h3></h3></div></div>
 <div class="container center">
   <div class="row" id="category-index">
     <% @categories.each do |category| %>
