--- a/app/views/admin/words/index.html.erb
+++ b/app/views/admin/words/index.html.erb
@@ -1,14 +1,12 @@
 <% provide :title, t("page.admin.words.title") %>
 <div class="center">
-  <%= link_to t("page.word.create"), admin_create_word_path,
-    class: "btn btn-lg btn-primary pull-right" %>
   <div class="filter">
     <%= form_tag admin_words_path, method: :get, id: "search-form" do %>
       <%= t "page.category.title" %>:
       <%= select_tag( :category_id, options_for_select(
         @categories.collect{ |category| [category.name, category.id]},
         params[:category_id]), include_blank: Settings.all,
-        class: "form-group") %>
+        class: "selectpicker") %>
       <% Settings.word_filter.each do |key, status| %>
         <%= radio_button_tag :word_filter, status,
           params[:word_filter] == status %>
@@ -16,10 +14,14 @@
           class: "font-normal" %>
       <% end %>
     </br>
-      <%= text_field_tag :search, params[:search],
-        placeholder: t("page.word.search_placeholer") %>
-      <%= submit_tag t("page.word.filter") %>
-    <% end %>
+    <div class="form-group row">
+      <div class="col-xs-6">
+        <%= text_field_tag :search, params[:search], class: "form-control",
+          placeholder: t("page.word.search_placeholer") %>
+          <%= submit_tag t("page.word.filter"), class: "btn btn-primary clear" %>
+        <% end %>
+      </div>
+    </div>
   </div>
   <%= render "words/index.html.erb" %>
 </div>
