--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,11 +3,11 @@
     <%= link_to t("page.framgia_system"), root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to t("page.home.home"), categories_path %></li>
-        <li><%= link_to t("page.help.help"), help_path %></li>
+        <li><%= link_to t("page.home.home"), root_path %></li>
         <% if logged_in? %>
           <li>
             <% if current_user.is_admin %>
+              <li><%= link_to t("page.category.title"), categories_path %></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   <%= t "page.admin.manager" %>
@@ -16,15 +16,36 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <%= link_to t("page.category.title"), admin_categories_path %>
+                    <%= link_to t("page.category.title"),
+                      admin_categories_path %>
                   </li>
                   <li>
-                    <%= link_to t("page.manager_user.users"), admin_users_path %>
+                    <%= link_to t("page.admin.users.list_users"),
+                      admin_users_path %>
+                  </li>
+                  <li>
+                    <%= link_to t("page.admin.words.list_words"),
+                      admin_words_path %>
                   </li>
                 </ul>
               </li>
             <% else %>
-              <%= link_to t("page.category.title"), categories_path %>
+              <%= link_to t("page.manager_user.users"), users_path %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  <%= t "page.admin.do_lesson" %>
+                  <%= image_tag "manager-icon.png" %>
+                  <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <%= link_to t("page.category.title"), categories_path %>
+                  </li>
+                  <li>
+                  <%= link_to t("page.admin.words.list_words"), words_path %>
+                  </li>
+                </ul>
+              </li>
             <% end %>
           </li>
           <li class="dropdown">
