--- a/app/views/relationships/create.js.erb
+++ b/app/views/relationships/create.js.erb
@@ -1,2 +1,4 @@
 $("#follow_form").html("<%= escape_javascript(render('users/unfollow')) %>");
-$("#followers").html('<%= @user.followers.count %>');
+$("#followers").html('<%= escape_javascript(link_to pluralize(@user.followers.count,
+  t("page.users.relationships.number_followers")),
+  relationship_path(@user, query:"followers")) %>');
