--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for @user, url: signup_path do |f| %>
-      <%= render "shared/error_messages" %>
+      <%= render "shared/error_messages", object: f.object %>
 
       <%= f.label :name %>
       <%= f.text_field :name, class: "form-control" %>
@@ -11,7 +11,7 @@
       <%= f.label :email %>
       <%= f.email_field :email, class: "form-control" %>
 
-      <%= f.label :password %>
+      <%= f.label :password, t("page.register.password") %>
       <%= f.password_field :password, class: "form-control" %>
 
       <%= f.label :password_confirmation, t("page.register.confirmation") %>
@@ -19,7 +19,6 @@
       <br>
       <%= f.submit t("page.register.create_user"), class: "btn btn-primary" %>
       <hr>
-      <p><%= link_to t("page.register.login") %></p>
     <% end %>
   </div>
 </div>
