--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,40 +1,43 @@
 <% provide :title, @user.name %>
 <div class="panel panel-info">
-  <div class="panel-body">
-    <div class="row">
-      <section class="user_info  text-center">
-        <h1>
-          <%= t "page.users.profile.my_profile", user_name: @user.name %>
-        </h1>
-      </section>
+  <div class="profile">
+    <div class="profile_left">
+      <div class="row">
+        <div class="col-lg-7">
+          <h1><%= t "page.users.profile.my_profile", user_name: @user.name %></h1>
+          <table class="table table-user-information">
+            <tbody>
+              <tr>
+                <td><b><%= t "page.users.profile.td_name" %></b></td>
+                <td><%= @user.name %></td>
+              </tr>
+              <tr>
+                <td><b><%= t "page.users.profile.td_email" %></b></td>
+                <td><%= @user.email %></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col-lg-1"></div>
+        <div class="col-lg-3">
+          <aside>
+            <section>
+              <h1><%= gravatar_for @user %></h1>
+            </section>
+            <section class="stats"><%= render "shared/stats" %>
+            <%= render "follow_form" if logged_in? %></section>
+          </aside>
+        </div>
+      </div>
     </div>
-    <div class="row">
-      <div class="col-md-3 col-lg-3" align="center">
-        <%= gravatar_for @user %>
-        <section class="stats">
-          <%= render "shared/stats" %>
-        </section>
-        <%= render "follow_form" if logged_in? %>
-      </div>
-      <div class="col-md-9 col-lg-9">
-        <table class="table table-user-information">
-          <tbody>
-            <tr>
-              <td><b><%= t "page.users.profile.td_name" %></b></td>
-              <td><%= @user.name %></td>
-            </tr>
-            <tr>
-              <td><b><%= t "page.users.profile.td_email" %></b></td>
-              <td><%= @user.email %></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+    <div class="profile_right">
     </div>
   </div>
   <div class="panel-body">
-    <div class="col-md-9 col-lg-5">
-      <h3><%= t "page.users.profile.title_lesson" %></h3>
+    <div class="col-md-9 col-lg-7">
+      <h3 class="lessons_learned_list">
+        <%= t "page.users.profile.title_lesson" %>
+      </h3>
       <div class="table-responsive table-condensed">
         <table class="table" id="list_user">
           <thead>
@@ -46,22 +49,31 @@
           </thead>
             <tbody>
               <% @lessons.each.with_index do |lesson, index| %>
-                <tr>
-                  <td><%= index+1 %></td>
-                  <td><%= lesson.created_at %></td>
-                  <td>
-                    <%= link_to lession_complete_button(lesson),
-                      lesson_path(lesson) %>
-                  </td>
-                </tr>
+                <% if current_user? lesson.user %>
+                  <tr>
+                    <td><%= index+1 %></td>
+                    <td><%= localize_time lesson.created_at %></td>
+                    <% if lesson.is_complete? %>
+                      <td>
+                        <%= link_to t("page.users.profile.stt_finish"),
+                          lesson_path(lesson), class: "btn btn-success" %>
+                      </td>
+                    <% else %>
+                      <td>
+                        <%= link_to t("page.users.profile.stt_continue"),
+                          lesson_path(lesson), class: "btn btn-primary" %>
+                      </td>
+                    <% end %>
+                  </tr>
+                <% end %>
               <% end %>
             </tbody>
         </table>
         <%= will_paginate @lessons %>
       </div>
     </div>
-    <div class="col-md-9 col-lg-6">
-      <h3><%= t "page.users.profile.title_activities" %></h3>
+    <div class="col-md-9 col-lg-5">
+      <h3 class="activities"><%= t "page.activities.title_activities" %></h3>
       <table class="table">
         <%= render partial: "shared/activity", collection: @user.activities %>
       </table>
