--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,16 @@
-<div class="center jumbotron">
-  <h1><%= t "page.home.title" %></h1>
-  <p><%= t "page.home.description" %></p>
-  <%= link_to t("page.signup.title"), signup_path,
-    class: "btn btn-lg btn-primary" %>
+<div class="jumbotron">
+  <% if logged_in? %>
+    <h3 class="center"><%= t ".activity_title" %></h3>
+    <table class="table">
+      <%= render partial: "shared/activity", collection: @activities %>
+    </table>
+    <%= will_paginate @activities %>
+  <% else %>
+    <div class="center jumbotron">
+      <h1><%= t "page.home.title" %></h1>
+      <p><%= t "page.home.description" %></p>
+      <%= link_to t("page.signup.title"), signup_path,
+        class: "btn btn-lg btn-primary" %>
+    </div>
+  <% end %>
 </div>
