--- a/app/views/admin/words/_form.html.erb
+++ b/app/views/admin/words/_form.html.erb
@@ -16,7 +16,7 @@
       <% end %>
       <br/>
     </div>
-    <span class="btn btn-primary btn-xs pull-right">
+    <span class="btn btn-default btn-xs pull-right">
       <%= link_to_add_fields t("page.admin.words.add_answer"), f, :answers %>
     </span>
     <br/>
