--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer col-md-12">
   <div class="row">
     <small><%= link_to t("page.fan_page_facebook"),
       "https://www.facebook.com/FramgiaVietnam/?fref=ts" %>
