--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,15 +1,15 @@
 <% provide :title, t("page.category.title") %>
-<div class="search-form">
-<%= form_tag(categories_path, :method => "get", id: "search-form") do %>
-  <%= text_field_tag :search, params[:search],
-    placeholder: t("page.category.search_placeholer") %>
-  <%= submit_tag t "page.search", :name => nil %>
-<% end %>
+<div class="search-form pull-right">
+  <%= form_tag(categories_path, :method => "get", id: "search-form") do %>
+    <%= text_field_tag :search, params[:search],
+      placeholder: t("page.category.search_placeholer") %>
+    <%= submit_tag t "page.search", name: nil %>
+  <% end %>
 </div>
-<ul class="categories">
+<ul class="categories box text-center">
   <% @categories.each do |category| %>
-    <li>
-      <h1><%= category.name %><h1>
+    <li class="col-md-6 panel panel-info">
+      <h1 class="panel-title label-primary"><%= category.name %><h1>
       <h2>
         <%= t "page.category.user_learn" %>
         <%= current_user.number_words_learend_in_category category.id %>
@@ -21,7 +21,8 @@
         <% end %>
       </h4>
       <%= link_to t("page.lessons.link_create_lesson"),
-        category_lessons_path(category), method: :post %>
+        category_lessons_path(category), method: :post,
+        class: "btn btn-default" %>
     </li>
   <% end %>
   <%= will_paginate %>
