--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,16 +16,16 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
+                    <%= link_to t("page.manager_words.words"),
+                      admin_words_path %>
+                  </li>
+                  <li>
                     <%= link_to t("page.category.title"),
                       admin_categories_path %>
                   </li>
                   <li>
                     <%= link_to t("page.admin.users.list_users"),
                       admin_users_path %>
-                  </li>
-                  <li>
-                    <%= link_to t("page.admin.words.list_words"),
-                      admin_words_path %>
                   </li>
                 </ul>
               </li>
