--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -329,3 +329,10 @@ footer {
 tbody_activities{
   margin-left: 20px;
 }
+#follow_form {
+  input {
+    width: 50%;
+    margin-left: 25%;
+    margin-top: 20px;
+  }
+}
