--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -73,7 +73,7 @@
       </div>
     </div>
     <div class="col-md-9 col-lg-7">
-      <h3><%= t "page.users.profile.title_activities" %></h3>
+      <h3 class="activities"><%= t "page.users.profile.title_activities" %></h3>
       <table class="table table_activities">
         <%= render partial: "shared/activity", collection: @activities %>
       </table>
