--- a/app/views/admin/words/index.html.erb
+++ b/app/views/admin/words/index.html.erb
@@ -1,6 +1,6 @@
 <% provide :title, t("page.admin.words.title") %>
 <div class="center">
-  <div class="filter">
+  <div class="filter filter_padding">
     <%= form_tag admin_words_path, method: :get, id: "search-form" do %>
       <%= t "page.category.title" %>:
       <%= select_tag( :category_id, options_for_select(
@@ -15,10 +15,13 @@
       <% end %>
     </br>
     <div class="form-group row">
-      <div class="col-xs-6">
+      <div class="col-xs-3"></div>
+      <div class="col-xs-5">
         <%= text_field_tag :search, params[:search], class: "form-control",
           placeholder: t("page.word.search_placeholer") %>
-          <%= submit_tag t("page.word.filter"), class: "btn btn-primary clear" %>
+      </div>
+      <div class="col-xs-3">
+        <%= submit_tag t("page.word.filter"), class: "btn btn-primary clear" %>
         <% end %>
       </div>
     </div>
