--- a/app/views/relationships/show.html.erb
+++ b/app/views/relationships/show.html.erb
@@ -1,31 +1,39 @@
 <% provide :title, t("page.users.relationships.title_page_follow") %>
 <div class="row">
-  <aside class="col-md-4">
-    <section class="user_info">
-      <h1><%= link_to @user.name, @user %></h1>
-      <%= render "shared/stats" %>
-    </section>
-  </aside>
+  <div class="col-lg-3">
+    <aside>
+      <section>
+        <h1><%= gravatar_for @user %></h1>
+      </section>
+      <section class="user_info">
+        <h1><%= link_to @user.name, @user %></h1>
+        <%= render "shared/stats" %>
+      </section>
+    </aside>
+  </div>
   <div class="panel-body">
     <div class="table-responsive table-condensed">
-      <table class="table">
-        <thead>
+      <table class="table table-hover th_word" id="list_user">
+        <thead class="title_table th_word">
           <tr>
-            <th><%= t "page.users.profile.td_name" %></th>
-            <th><%= t "page.users.profile.td_email" %></th>
+            <th class="th_word"><%= t "page.users.profile.td_Avatar" %></th>
+            <th class="th_word"><%= t "page.users.profile.td_name" %></th>
+            <th class="th_word"><%= t "page.users.profile.td_email" %></th>
           </tr>
         </thead>
         <tbody>
           <% if current_user.following? @user %>
             <% @users.each do |following| %>
               <tr>
-                <td><%= link_to following.email, following %></td>
+                <td><%= gravatar_for following, size: 50 %></td>
+                <td><%= link_to following.name, following %></td>
                 <td><%= following.email %></td>
               </tr>
             <% end %>
           <% else %>
             <% @users.each do |followers| %>
               <tr>
+                <td><%= gravatar_for followers, size: 50 %></td>
                 <td><%= link_to followers.name, followers %></td>
                 <td><%= followers.email %></td>
               </tr>
