--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -15,10 +15,13 @@
       <% end %>
     </br>
     <div class="form-group row">
-      <div class="col-xs-6">
+      <div class="col-xs-3"></div>
+      <div class="col-xs-5">
         <%= text_field_tag :search, params[:search], class: "form-control",
           placeholder: t("page.word.search_placeholer") %>
-        <%= submit_tag t("page.word.filter"), class: "btn btn-primary clear"%>
+      </div>
+      <div class="col-xs-3">
+        <%= submit_tag t("page.word.filter"), class: "btn btn-primary clear" %>
         <% end %>
       </div>
     </div>
